--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,6 +26,10 @@ h4 {
   font-size: 40px;
 }
 
+p {
+  color: #515050;
+}
+
 @media (max-width: 480px) {
   body {
     font-size: 16px;
@@ -207,6 +211,10 @@ a {
   font-size: 20px;
   color: var(--white);
   gap: 25px;
+}
+
+.container__button--main p {
+  color: var(--white);
 }
 
 /* About me */
