--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,6 +50,19 @@ a {
   text-decoration: none;
 }
 
+@media (min-width: 481px) {
+  .nav__bar--desktop,
+  main,
+  .about__me,
+  .My__abilities,
+  .experience,
+  .portafolio,
+  .contact,
+  footer {
+    min-width: 1200px;
+  }
+}
+
 /* Nav */
 
 @media (max-width: 480px) {
@@ -115,7 +128,6 @@ a {
 }
 
 .nav__bar--desktop {
-  min-width: 1200px;
   width: 75%;
   display: flex;
   justify-content: flex-end;
@@ -249,7 +261,7 @@ a {
   background-color: #d9d5d5;
   width: 250px;
   border-radius: 10px;
-  padding: 10px 5px;
+  padding: 15px 15px;
   margin: 10px;
 }
 .table_title {
@@ -273,7 +285,7 @@ a {
     width: 50%;
     background-color: #d9d5d5;
     border-radius: 10px;
-    padding: 10px 5px;
+    padding: 15px 15px;
     margin: 10px;
   }
   .table_title {
@@ -331,7 +343,7 @@ a {
 /* Portafolio */
 
 .portafolio h3 {
-  padding-top: 40px;
+  padding: 45px 0;
   text-align: center;
 }
 
